manifest/zot.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: zot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zot
  namespace: zot
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/instance: zot
    app.kubernetes.io/name: zot
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: zot
      app.kubernetes.io/name: zot
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: zot
        app.kubernetes.io/name: zot
    spec:
      containers:
        - env:
            - name: exampleenv
              value: "myexample"
          name: zot
          image: ghcr.io/project-zot/zot:v2.1.2
          ports:
            - name: zot
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: zot-registry
              mountPath: /var/lib/registry
            - mountPath: /etc/zot/config.json
              name: config
              readOnly: true
              subPath: config.json
      volumes:
        - name: zot-registry
          persistentVolumeClaim:
            claimName: zot-storage
        - name: config
          configMap:
            name: zot
            items:
              - key: config.json
                path: config.json
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: zot
    app.kubernetes.io/name: zot
  name: zot
  namespace: zot
spec:
  ports:
    - name: zot
      port: 5000
      protocol: TCP
      targetPort: zot
  selector:
    app.kubernetes.io/instance: zot
    app.kubernetes.io/name: zot
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zot
  namespace: zot
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
    # - name: external
    #   namespace: gateway
    #   sectionName: https
  hostnames:
    - "zot.<path:stringreplacesecret#domain>"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zot
          port: 5000
